# 8fold_Amoungus

./: .env  .gitignore  README.md  agents.py  config.py  engine.py  gemini_presentation.json  main.py  pyproject.toml  template_agent.py  test.py  tournament.py
engine/: agents.py  config.py  engine.py  replay_theater.py  tournament.py  visualizer.py
examples/: gemini_personality_agent.py  open_router_personality_agent.py  simple_rule_based_agent.py
visualiser/: app.js  index.html  styles.css
