[project]
name = "eightfold-amongus"
version = "0.1.0"
description = "A tick-based Among Us simulation for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true