[project]
name = "eightfold-amongus"
version = "0.1.0"
description = "Among Us LLM Agent Simulation for ARIES"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = false 
